; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_memory.c_follow_pte.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_memory.c_follow_pte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mm_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mm_struct*, i64, i32**, i32**)* @follow_pte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @follow_pte(%struct.mm_struct* %0, i64 %1, i32** %2, i32** %3) #0 {
  %5 = alloca %struct.mm_struct*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i32, align 4
  store %struct.mm_struct* %0, %struct.mm_struct** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32** %2, i32*** %7, align 8
  store i32** %3, i32*** %8, align 8
  %10 = load i32**, i32*** %8, align 8
  %11 = load i32*, i32** %10, align 8
  %12 = load %struct.mm_struct*, %struct.mm_struct** %5, align 8
  %13 = load i64, i64* %6, align 8
  %14 = load i32**, i32*** %7, align 8
  %15 = load i32**, i32*** %8, align 8
  %16 = call i32 @__follow_pte_pmd(%struct.mm_struct* %12, i64 %13, i32* null, i32** %14, i32* null, i32** %15)
  store i32 %16, i32* %9, align 4
  %17 = icmp ne i32 %16, 0
  %18 = xor i1 %17, true
  %19 = zext i1 %18 to i32
  %20 = call i32 @__cond_lock(i32* %11, i32 %19)
  %21 = load i32, i32* %9, align 4
  ret i32 %21
}

declare dso_local i32 @__cond_lock(i32*, i32) #1

declare dso_local i32 @__follow_pte_pmd(%struct.mm_struct*, i64, i32*, i32**, i32*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
